--- a/client/views/order-form.html
+++ b/client/views/order-form.html
@@ -49,8 +49,5 @@
       </div>
     </fieldset>
   </form>
-  <map>
-  <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-</ui-gmap-google-map>
-  </map>
+<map center="-34.397, 150.644" zoom="8"></map>
 <section>
