--- a/client/views/order-form.html
+++ b/client/views/order-form.html
@@ -49,5 +49,5 @@
       </div>
     </fieldset>
   </form>
-<map center="-34.397, 150.644" zoom="8"></map>
+<map center="19.1140324, 72.9237601" zoom="14"></map>
 <section>
