Socket server connection added

--- a/client/views/all-orders.html
+++ b/client/views/all-orders.html
@@ -10,7 +10,8 @@
   </article> -->
   <listing class="listing-panel">
   <div  ng-repeat="o in orderList.slice().reverse()">
-  <p>{{o.createdAt}}</p>
+    <p>{{o.address}}</p>
+    <p>{{o.pickup}}</p>
   </div>
   </listing>
 <!--   <ui-gmap-google-map center='map.center' zoom='map.zoom'>
